I have finished the second task.
You may see in the "results.txt" file some questionmarks instead of the accented characters such as áéí etcetc. The reason behind this problem is that the encoding of the import.sql .

--- a/2nd task/2ndTask/2ndTask/2ndTask.csproj
+++ b/2nd task/2ndTask/2ndTask/2ndTask.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>_2ndTask</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.23" />
+  </ItemGroup>
+
 </Project>
